Fix empty horizontal space in canvas when select overflows.
[FIXED]     When <select> overflows but is forced down in width, it still causes a blank horizontal scroll space on mobile.

--- a/themes/2020/assets/css/style.css
+++ b/themes/2020/assets/css/style.css
@@ -126,6 +126,7 @@ form label {
 }
 
 form input, form textarea, form select, form button {
+    overflow: hidden;
     margin: 0.2em 0;
     font-size: larger;
 }
